<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Layouts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_a">A</string>
    <string name="button_b">B</string>
    <string name="button_c">C</string>
    <string name="button_d">D</string>
    <string name="button_e">E</string>
    <string name="button_f">F</string>
    <string name="button_g">G</string>
    <string name="button_h">H</string>
    <string name="button_i">I</string>
    <string name="title_activity_form">FormActivity</string>
    <string name="email_to">To</string>
    <string name="text_subject">Subject</string>
    <string name="text_message">Message</string>
    <string name="button_send">Send</string>

</resources>
